--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
 	"workbench.colorCustomizations": {
-		"activityBar.activeBackground": "#ff3333",
-		"activityBar.background": "#ff3333",
+		"activityBar.activeBackground": "#cc0000",
+		"activityBar.background": "#cc0000",
 		"activityBar.foreground": "#e7e7e7",
 		"activityBar.inactiveForeground": "#e7e7e799",
-		"activityBarBadge.background": "#00df00",
-		"activityBarBadge.foreground": "#15202b",
+		"activityBarBadge.background": "#004000",
+		"activityBarBadge.foreground": "#e7e7e7",
 		"commandCenter.border": "#e7e7e799",
-		"sash.hoverBorder": "#ff3333",
-		"statusBar.background": "#ff0000",
+		"sash.hoverBorder": "#cc0000",
+		"statusBar.background": "#990000",
 		"statusBar.foreground": "#e7e7e7",
-		"statusBarItem.hoverBackground": "#ff3333",
-		"statusBarItem.remoteBackground": "#ff0000",
+		"statusBarItem.hoverBackground": "#cc0000",
+		"statusBarItem.remoteBackground": "#990000",
 		"statusBarItem.remoteForeground": "#e7e7e7",
-		"titleBar.activeBackground": "#ff0000",
+		"titleBar.activeBackground": "#990000",
 		"titleBar.activeForeground": "#e7e7e7",
-		"titleBar.inactiveBackground": "#ff000099",
+		"titleBar.inactiveBackground": "#99000099",
 		"titleBar.inactiveForeground": "#e7e7e799"
 	},
-	"peacock.color": "red"
+	"peacock.color": "#990000"
 }
